Update the goat layout

--- a/waybar/style.css
+++ b/waybar/style.css
@@ -49,7 +49,7 @@
 #waybar {
   background-color: @surface;
   color: @text;
-  font-family: UbuntuMono Nerd Font;
+  font-family: RecMonoCasual Nerd Font;
   font-size: 16;
 }
 
